[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tossinvest-ai-cli"
version = "0.1.0"
description = "AI-oriented CLI client for Toss Securities Open API"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
toss = "tossinvest.cli:main"

